test/must_fail/api/must_fail_read.ref
error: variable 'optional_prompt' in function 'read(optional_prompt)' should be string
  [must_fail_read.ngjs:0:0] in <anonymous>()
    read(1);
    ^

hint: function 'read(optional_prompt)' was called with 1 arguments
hint: argument #0 was 1 (number)

Stack trace (1 frames):
  [must_fail_read.ngjs:0:0] in <anonymous>()
    read(1);
    ^

exit(7)
