test/must_fail/api/must_fail_read.ngjs
#!/usr/bin/env ngspicejs
// at most 1 string arg needed
// linter: ngspicejs-lint
"use strict";

read(1);
